tests/cases/positive/syntax/grading/funTyGradedBinder.lam
-- you can grade binders in function types
test : (x : [0, 0] Level) -> Level
