tests/cases/negative/syntax/namedLastParamInFunTy.lam
-- you can't name the last parameter of a function type
f : a -> (x : a)
